Profile page on firefox needs fixing

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -51,7 +51,7 @@ md-sidenav.md-closed.md-locked-open-add-active.user_menu {
     min-width: 100px !important;
     width: auto;
     max-width: 200px !important;
-    max-height: 60vh !important;
+    max-height: 65vh !important;
 } 
 
 .opacity_0{
